---------------------------------------------------------------------------------------------------
Version: 1.0.8
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: 2024-12-31
  Info:
    - README.md update
---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 2024-12-31
  Info:
    - README.md update
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2024-12-31
  Changes:
    - Extract the unified API into 'api.lua' for clarity.
  Info:
    - Syncing of README.md to the mod portal.
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2024-12-30
  Changes:
    - Organized exports into a single API file for readability.
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2024-12-30
  Modding:
    - Compatibility with Organized Solar System.
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2024-12-30
  Bugfixes:
    - Fixed a crash.
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2024-12-30
  Modding:
    - Dependencies updated.
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2024-12-30
  Modding:
    - APIs: PlanetsLib:planet_extend, PlanetsLib.technology_icons_moon, PlanetsLib.cargo_drops_tech_effect, PlanetsLib.technology_icons_planet_cargo_drops
    - When a technology with name '[planet_name]-cargo-drops' is created, cargo drops to that planet (excepting those with only players or construction robots) will be prevented until that technology is researched.